<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Fintech">fintech</string>
    <string name="app_name">CryptoPaid</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="username">username</string>
    <string name="back_to_settings">BACK TO SETTINGS</string>
    <string name="password">password</string>
    <string name="register">Register</string>
    <string name="Role" />
    <string name="role" />

    <string-array name="types">
        <item>Select Transaction</item>
        <item>Crypto johnSta</item>
        <item>Contract</item>
    </string-array>

    <string-array name="role">
        <item>Select Role</item>
        <item>Regular User</item>
        <item>Admin User</item>
        <item>Manager User</item>
    </string-array>

    <string-array name="contract">
        <item>Select Contract</item>
        <item>Digital Asset</item>
        <item>Smart Contract</item>
    </string-array>

    <string-array name="difficulty">
        <item>Select Difficulty</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="reward">
        <item>Select Reward</item>
        <item>10</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
    </string-array>

</resources>
