<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/Register_LBL_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="Register"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/Register_EDT_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Register_LBL_title"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:hint="First Name"
        android:tag="@string/first_name" />

    <EditText
        android:id="@+id/Register_EDT_last"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Register_EDT_first"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:hint="last Name"
        android:tag="@string/last_name" />

    <EditText
        android:id="@+id/Register_EDT_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Register_EDT_last"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:hint="email"
        android:tag="@string/email" />

    <EditText
        android:id="@+id/Register_EDT_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Register_EDT_email"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="50dp"
        android:hint="@string/password"
        android:tag="@string/password" />

    <Spinner
        android:id="@+id/Register_SPNR_Role"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Register_EDT_password"
        android:layout_marginTop="20dp"
        android:autofillHints="Role" />


    <Button
        android:id="@+id/Register_BTN_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Register_EDT_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:tag="register"
        android:text="@string/register" />



</RelativeLayout>